# cellcreator

./: CMakeLists.txt  README.rst
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  cellml1to2.xsl  documentarea.cpp  documentarea.h  documentwidget.cpp  documentwidget.h  documentwidget.ui  documentwindow.cpp  documentwindow.h  droparea.cpp  iscellml1.xsl  iscellml2.xsl  mainwindow.cpp  mainwindow.h  mainwindow.ui  manipulate.cpp  manipulate.h  messagehandler.h  resources.qrc  utilities.cpp  utilities.h
src/lib/tools/: CMakeLists.txt  codegenerationdialog.cpp  codegenerationdialog.cpp.autosave  codegenerationdialog.h  codegenerationdialog.ui  conversiondialog.cpp  conversiondialog.h  conversiondialog.ui  droparea.cpp  droparea.h
